# SpineDiffusion

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  spec-file.txt
configs/: config.yaml  config_16.yaml  config_256.yaml  config_32.yaml  config_64.yaml  config_cond.yaml  config_cond_aug.yaml  config_uncond.yaml  config_uncond_aug.yaml
notebooks/: eda_dataset.ipynb  test_datamodule.ipynb  test_diffusion_models.ipynb  visualize_results.ipynb  visualize_training_results.ipynb
scripts/: tf_to_csv_logs.py
spinediffusion/callbacks/: callbacks.py
spinediffusion/data/: dataclass.py  datamodule.py  sl_generator.py  transforms.py
spinediffusion/data/transforms/: augmenting.py  closing.py  normalizing.py  projecting.py  tensoring.py
spinediffusion/datamodule/: data_classes.py  data_loaders.py  data_transformers.py  datamodule.py  dataset.py  sl_generator.py
spinediffusion/datamodule/transforms/: README.md  augmenting.py  centering.py  cropping.py  normalizing.py  projecting.py  resampling.py  tensoring.py
spinediffusion/models/: diffusion_models.py
spinediffusion/utils/: hashing.py  misc.py
